--- a/templates/category_page.hbs
+++ b/templates/category_page.hbs
@@ -13,6 +13,8 @@
         <div class="card category-section">
             <div class="header">{{name}}</div>
             <div class="content">
+                <p>{{description}}</p>
+
                 {{#if articles}}
                     <ul>
                         {{#each articles}}
